<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_awal2"
    tools:context=".haldaftar">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp">

        <ImageView
            android:id="@+id/gambarlogo3"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="27dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/logocopy2" />



        <LinearLayout
            android:id="@+id/layout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_below="@id/gambarlogo3">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Email"
                android:textColorHint="@color/Snow"
                android:inputType="textEmailAddress" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout5">

            <EditText
                android:id="@+id/password1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Password"
                android:textColorHint="@color/Snow"
                android:inputType="textPassword"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout6">

            <EditText
                android:id="@+id/password2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Password2"
                android:textColorHint="@color/Snow"
                android:inputType="textPassword"/>

        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout7"
            android:gravity="center"
            android:layout_marginTop="15dp">

            <Button
                android:id="@+id/tomboldaftar2"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:background="@drawable/tombol_masuk"
                android:text="@string/tomboldaftar1"/>

        </RelativeLayout>


    </RelativeLayout>




</RelativeLayout>